--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "doctrine/orm": "^2.6",
     "doctrine/migrations": "^2.1",
     "ext-fileinfo": "*",
-    "ext-json": "*"
+    "ext-json": "*",
+    "sendgrid/sendgrid": "7.4.6"
   }
 }
